# dancehap

./: .gitignore  ARCHITECTURE.md  BUILD-LOCAL.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TROUBLESHOOTING.md
.github/workflows/: ci.yml
cmake/: FindLibObs.cmake  FindONNXRuntime.cmake  version.h.in
data/effects/: mask_alpha_filter.effect
docs/adr/: ADR-001-plateformes-cibles.md  ADR-002-architecture-modulaire.md  ADR-003-modele-matting.md  ADR-004-stream-deck.md  ADR-005-licence-mit.md  ADR-006-repo-dont-blink.md  ADR-007-audio-master-clock.md  README.md
docs/plans/: PLAN-PHASE-1.4.md  PLAN-PHASE-1.md  PLAN-PHASE-2.md
scripts/: download_models.sh  download_rvm_model.sh  export_rvm_onnx.py
src/: ai_matte_filter.cpp  ai_matte_filter.hpp  audio_decoder.cpp  audio_decoder.hpp  clip_player.cpp  clip_player.hpp  hap_clip_source.cpp  hap_clip_source.hpp  hap_decoder.cpp  hap_decoder.hpp  hap_demuxer.cpp  hap_demuxer.hpp  matte_engine.cpp  matte_engine.hpp  obs_compat.hpp  obs_stub.cpp  plugin.cpp  plugin.hpp
tests/: CMakeLists.txt
tests/assets/: README.md  generate_test_hap.py  sample_hap_noaudio.mov  sample_hapa_5s.mov  sample_hapa_5s_pcm.mov
tests/smoke/: SMOKE-1.4.md  SMOKE-1.6.md  check_source_registered.sh  run_smoke_macos.sh  run_smoke_windows.ps1
tests/unit/: test_ai_matte_filter.cpp  test_clip_player.cpp  test_hap_clip_source.cpp  test_hap_decoder.cpp  test_hap_demuxer.cpp  test_matte_engine.cpp  test_skeleton.cpp
